// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Default
      </span>
    </div>
  </div>
  <div
    class="soui-tag soui-tag-tag soui-tag-info soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Info
      </span>
    </div>
  </div>
  <div
    class="soui-tag soui-tag-tag soui-tag-danger soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Danger
      </span>
    </div>
  </div>
  <div
    class="soui-tag soui-tag-tag soui-tag-warning soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Warning
      </span>
    </div>
  </div>
  <div
    class="soui-tag soui-tag-tag soui-tag-success soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-tangerine soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-magenta soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-purple soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-indigo soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-cyan soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-neon soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-lemon soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-brown soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-tangerine soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-magenta soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-purple soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-indigo soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-cyan soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-neon soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-lemon soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-brown soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-tangerine soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-magenta soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-purple soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-indigo soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-cyan soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-neon soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-lemon soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-brown soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-tangerine soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-magenta soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-purple soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-indigo soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-cyan soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-neon soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-lemon soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-brown soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-info soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-danger soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-warning soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-success soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-info soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-danger soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-warning soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-success soui-tag-fill"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-info soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-danger soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-warning soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-success soui-tag-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-info soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-danger soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-warning soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-success soui-tag-bright-outline"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-small soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Small
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-large soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Large
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="soui-tag soui-tag-tag soui-tag-small soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Small
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-large soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Large
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tag 1
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tag 2
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright soui-tag-disabled"
    >
      <div
        class="soui-tag-wrapper"
      >
        <span>
          Tag 3
        </span>
      </div>
      <div
        class="soui-tag-close-icon"
      >
        <span
          class="soui-tag-close-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="custom-tag-addTag-0-2-1 soui-tag soui-tag-tag soui-tag-default soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <div
        class="soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="margin-inline-end: 4px;"
          >
            <svg
              fill="currentColor"
              height="12px"
              style="display: block;"
              viewBox="0 0 24 24"
              width="12px"
            >
              <path
                clip-rule="evenodd"
                d="M11.8185 2.09595C12.3708 2.09595 12.8185 2.54366 12.8185 3.09595V10.8181H20.9041C21.4564 10.8181 21.9041 11.2658 21.9041 11.8181C21.9041 12.3704 21.4564 12.8181 20.9041 12.8181H12.8185V20.904C12.8185 21.4563 12.3708 21.904 11.8185 21.904C11.2662 21.904 10.8185 21.4563 10.8185 20.904V12.8181H3.10059C2.5483 12.8181 2.10059 12.3704 2.10059 11.8181C2.10059 11.2658 2.5483 10.8181 3.10059 10.8181H10.8185V3.09595C10.8185 2.54366 11.2662 2.09595 11.8185 2.09595Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Abc
      </span>
    </div>
    <div
      class="soui-tag-close-icon"
    >
      <span
        class="soui-tag-close-icon-wrapper"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5.60994 4.21871L5.70415 4.30189L12.0015 10.5851L18.3584 4.22893C18.749 3.8384 19.3821 3.8384 19.7727 4.22893C20.1331 4.58941 20.1609 5.15664 19.8558 5.54893L19.7727 5.64314L13.4165 12.0001L19.708 18.2923C20.0985 18.6828 20.0985 19.316 19.708 19.7065C19.3475 20.067 18.7803 20.0947 18.388 19.7897L18.2938 19.7065L12.0015 13.4151L5.68269 19.733C5.29217 20.1235 4.659 20.1235 4.26848 19.733C3.908 19.3725 3.88027 18.8053 4.18529 18.413L4.26848 18.3188L10.5865 12.0001L4.28994 5.71611C3.89941 5.32558 3.89941 4.69242 4.28994 4.30189C4.65042 3.94141 5.21765 3.91368 5.60994 4.21871Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Default
      </span>
    </div>
  </div>
  <div
    class="soui-tag soui-tag-tag soui-tag-rounded soui-tag-default soui-tag-bright"
  >
    <div
      class="soui-tag-wrapper"
    >
      <span>
        Rounded
      </span>
    </div>
  </div>
</div>
`;
